--- a/vue_react/notebook/package.json
+++ b/vue_react/notebook/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.7.9",
     "lib-flexible": "^0.3.2",
     "prop-types": "^15.8.1",
+    "query-string": "^9.1.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.2.0",
